--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,10 +47,13 @@ dependencies {
     kapt 'com.google.dagger:dagger-compiler:2.40.1'
     implementation 'javax.inject:javax.inject:1'
 
-    //Retrofit
+    //Internet
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.9.0'
+    implementation 'com.squareup.okhttp3:okhttp:3.14.9'
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.14.9'
+
 
     //Glide
     implementation 'com.github.bumptech.glide:glide:4.13.0'
