--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,6 +64,16 @@ dependencies {
     annotationProcessor("androidx.room:room-compiler:2.4.2")
     kapt("androidx.room:room-compiler:2.4.2")
 
+    //Navigation
+    implementation "androidx.navigation:navigation-ui-ktx:2.4.2"
+    implementation "androidx.navigation:navigation-fragment-ktx:2.4.2"
+
+    // Feature module Support
+    implementation "androidx.navigation:navigation-dynamic-features-fragment:2.4.2"
+
+    // Testing Navigation
+    androidTestImplementation "androidx.navigation:navigation-testing:2.4.2"
+
     implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
 
     implementation "androidx.activity:activity-ktx:1.4.0"
